# umkoin

./: .appveyor.yml  .cirrus.yml  .gitignore  .python-version  .travis.yml  .travis.yml.save  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.md.orig  CONTRIBUTING.md.rej  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  appveyor.yml  configure.ac  configure.ac.rej  libumkoinconsensus.pc.in  libumkoinkernel.pc.in  umkoin.sln  umkoin.vcxproj  umkoin.vcxproj.filters  vcpkg.json
src/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  amount.h  arith_uint256.h  attributes.h  banman.h  base58.cpp  base58.h  bech32.h  bip324.cpp  bip324.h  blockencodings.h  blockfilter.h  bloom.h  btcsignals.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  (+135 more)
src/bench/: .gitignore  CMakeLists.txt  addrman.cpp  bench.cpp  bench.h  bench_umkoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  cluster_linearize.cpp  coin_selection.cpp  connectblock.cpp  data.cpp  data.h  load_external.cpp  perf.h  readblock.cpp  readwriteblock.cpp  rpc_blockchain.cpp  strencodings.cpp  verify_script.cpp  wallet_create.cpp  wallet_create_tx.cpp  wallet_ismine.cpp  wallet_loading.cpp  wallet_migration.cpp
src/common/: args.cpp  args.h  bloom.h  config.cpp  init.cpp  init.h  interfaces.cpp  license_info.cpp  license_info.h  messages.h  netif.cpp  netif.h  pcp.h  run_command.cpp  run_command.h  settings.cpp  settings.h  signmessage.cpp  signmessage.h  system.cpp  system.h  types.h  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibc_sanity_fdelt.cpp  sanity.h  stdin.cpp  stdin.h  strnlen.cpp
src/config/: bitcoin-config.h  bitcoin-config.h.in
src/consensus/: amount.h  consensus.h  merkle.cpp  merkle.h  params.h  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: CMakeLists.txt  aes.h  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hex_base.h  hkdf_sha256_32.h  hmac_sha256.h  hmac_sha512.h  muhash.h  poly1305.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha3.h  sha512.cpp  sha512.h  siphash.h
src/index/: base.h  blockfilterindex.h  coinstatsindex.h  db_key.h  disktxpos.h  txindex.h  txospenderindex.h
src/init/: basic.cpp  common.cpp  common.h  umkoin-gui.cpp  umkoin-node.cpp  umkoin-qt.cpp  umkoind.cpp
src/interface/: handler.h  node.cpp  node.h  wallet.h
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  mining.h  node.cpp  node.h  rpc.h  types.h  wallet.h
src/ipc/: CMakeLists.txt  context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/kernel/: .chainparams.cpp.swp  CMakeLists.txt  blockmanager_opts.h  caches.h  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.h  context.h  cs_main.h  disconnected_transactions.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_persist.h  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  types.h  umkoinkernel.cpp  umkoinkernel.h  umkoinkernel_wrapper.h  validation_cache_sizes.h  warning.h
src/logging/: categories.h  timer.h
src/minisketch/: README.md
src/node/: abort.h  blockmanager_args.h  blockstorage.cpp  blockstorage.h  caches.h  chainstate.h  chainstatemanager_args.h  coin.h  coins_view_args.h  coinstats.h  connection_types.h  context.h  database_args.h  eviction.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  kernel_notifications.cpp  kernel_notifications.h  mempool_args.h  mempool_persist.h  mempool_persist_args.h  miner.h  mini_miner.h  minisketchwrapper.h  peerman_args.h  protocol_version.h  psbt.h  timeoffsets.h  transaction.cpp  transaction.h  txdownloadman.h  txdownloadman_impl.h  txorphanage.h  txreconciliation.h  types.h  ui_interface.h  utxo_snapshot.h  validation_cache_args.h  warnings.cpp  (+1 more)
src/policy/: ephemeral_policy.h  feerate.cpp  feerate.h  fees.cpp  fees.h  fees_args.cpp  fees_args.h  packages.h  policy.h  rbf.h  settings.h  truc_policy.h  v3_policy.h
src/primitives/: block.h  transaction.h  transaction_identifier.h
src/qt/: CMakeLists.txt  Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  callback.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  freespacechecker.h  guiconstants.h  guiutil.cpp  guiutil.h  initexecutor.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  main.cpp  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  (+78 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  external_signer.cpp  mempool.cpp  mempool.h  mining.cpp  mining.h  misc.cpp  net.cpp  net.h  node.cpp  output_script.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  safemode.h  server.cpp  server.h  server_util.h  signmessage.cpp  util.cpp  util.h
src/script/: descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  ismine.h  keyorigin.h  miniscript.h  parsing.h  script.h  script_error.h  sigcache.h  sign.cpp  sign.h  signingprovider.h  solver.h  standard.cpp  standard.h  umkoinconsensus.cpp  umkoinconsensus.h  verify_flags.h
src/secp256k1/: .cirrus.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile.am  README.md  configure.ac  libsecp256k1.pc.in
(+1616 files in other folders)
